# pps-gc

./: Cargo.toml
performance/baseline/: Cargo.toml
performance/baseline/src/: main.rs
pps-garbled-circuits/: Cargo.toml  PERFORMANCE.md
pps-garbled-circuits/examples/: measure-gates.rs  measure-gates2.rs  measure-performance.rs  measure-performance2.rs  measure-total-communication.rs  measure-total-communication2.rs
pps-garbled-circuits/src/: byte_array.rs  encoded.rs  lib.rs  plain.rs  utils.rs
pps-garbled-circuits/src/circuits/: batched_update.rs  mod.rs  output.rs  update_index_table.rs  update_table.rs
pps-garbled-circuits/tests/: circuits-usage.rs
pps-sgx/: Cargo.toml  README.md  build.rs  manifest.template.yaml
pps-sgx/proto/: pps.proto
pps-sgx/src/: lib.rs
pps-sgx/src/crypto/: keys.rs  mod.rs  serde.rs  types.rs
pps-sgx/src/proto/: hashable.rs  mod.rs  pps.rs  response.rs
pps-sgx/testdata/: attestation_private_key.json  receiver_decryption_key.json  verification_private_key.json
src/: main.rs
src/circuits/: auxiliary_tables.rs  byte_array.rs  mod.rs  shares.rs  table.rs  update_last_upd_table.rs  update_table.rs  utils.rs
