[package]
name = "stealth-address"
version = "0.1.0"
authors = ["ZenGo X <zengo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-garbling = { git = "https://github.com/GaloisInc/swanky" }
ocelot = { git = "https://github.com/GaloisInc/swanky" }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky" }

anyhow = "1"
itertools = "0.10"
rand = "0.7"
bitvec = "0.22"