[package]
name = "pps-sgx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9"
base64 = "0.13"
hex = "0.4"
typenum = "1"
rand = "0.8"
rsa = { version = "0.4", features = ["serde"] }
sha2 = "0.9"
hkdf = "0.11"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "macros"]}
async-trait = "0.1"
tonic = "0.4"
tower-service = "0.3"
prost = "0.7"

[dev-dependencies]
lazy_static = "1"

[build-dependencies]
tonic-build = "0.4"
