[package]
name = "baseline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
governor = "0.3"
async-stream = "0.3"
nonzero_ext = "0.3"

rand = { version = "0.8", features = ["small_rng"] }
rsa = "0.5"
sha2 = "0.9"
